<resources>
    <string name="app_name">MyDemos</string>

    <string name="error_scene_tips">不好意识哦，出现错误了!</string>
    <string name="error_solution_click_retry">轻触重试</string>

    <!--异常-->
    <string name="unknow_message_error">发生未知错误</string>
    <string name="exception_message_generic">应用发生异常</string>
    <string name="exception_message_no_connection">网络连接异常</string>
    <string name="exception_message_host_error">服务器发生异常</string>

    <!--通用-->
    <string name="confirm">确定</string>

    <!--账户-->
    <string name="login">登录</string>
    <string name="forget_password">忘记密码？</string>
    <string name="register">现在注册</string>
    <string name="register_immediatlly">立即注册</string>

    <!--Main-->
    <string name="main_login_demo">登录实例</string>
    <string name="main_mta_demo">mta实例</string>
    <string name="main_shadow_demo">阴影图层实例</string>
    <string name="main_recycler_view_demo">RecyclerView实例</string>
    <string name="main_expression_demo">表情textview实例</string>
    <string name="main_ormlite">ormlite数据库实例</string>
    <string name="main_date_picker">日期选择器</string>
    <string name="main_time_picker">时间选择器</string>

    <!--Mta-->
    <string name="mta_account_statistic">账户统计</string>
    <string name="mta_account_statistic_details">点击后，mta账户数新增1个</string>
    <string name="mta_account_statistic_hint">输入需要新增的账户名</string>
    <string name="mta_custom_event">自定义事件</string>
    <string name="mta_custom_event_details">自定义事件具体统计详细</string>
    <string name="mta_normal_event">普通事件</string>
    <string name="mta_normal_event_details">上报普通点击事件</string>
    <string name="mta_calculate_event">计算事件</string>
    <string name="mta_calculate_begin">开始计算</string>
    <string name="mta_calculate_end">结束计算</string>
    <string name="mta_visual_event">可视化埋点事件</string>
    <string name="mta_visual_event_details">用于MTA中测试可视化埋点（未生效）</string>

    <!--Ormlite-->
    <string name="ormlite_add">增加</string>
    <string name="ormlite_delete">删除</string>
    <string name="ormlite_upgrade">修改</string>
    <string name="ormlite_query">查询</string>
    <!--RecyclerView-->
    <string name="recycler_view_xiaomei">小美动态</string>
</resources>
