<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button"
            android:padding="5dp"
            android:text="@string/main_login_demo"
            android:textColor="@color/font_primary"
            android:textSize="@dimen/font_normal" />

        <TextView
            android:id="@+id/tv_mta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/main_mta_demo"
            android:textColor="@color/font_primary"
            android:textSize="@dimen/font_normal" />
        <TextView
            android:id="@+id/tv_shadow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/main_shadow_demo"
            android:textColor="@color/font_primary"
            android:textSize="@dimen/font_normal" />
        <TextView
            android:id="@+id/tv_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/main_recycler_view_demo"
            android:textColor="@color/font_primary"
            android:textSize="@dimen/font_normal" />
        <TextView
            android:id="@+id/tv_expression_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/main_expression_demo"
            android:textColor="@color/font_primary"
            android:textSize="@dimen/font_normal" />
        <TextView
        android:id="@+id/tv_ormlite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_button"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/main_ormlite"
        android:textColor="@color/font_primary"
        android:textSize="@dimen/font_normal" />
        <TextView
            android:id="@+id/tv_date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/main_date_picker"
            android:textColor="@color/font_primary"
            android:textSize="@dimen/font_normal" />
        <TextView
            android:id="@+id/tv_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/main_time_picker"
            android:textColor="@color/font_primary"
            android:textSize="@dimen/font_normal" />

    </LinearLayout>

</LinearLayout>