<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_event_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button"
            android:padding="5dp"
            android:text="@string/mta_normal_event"
            android:textColor="@color/font_primary"
            android:textSize="@dimen/font_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:text="@string/mta_normal_event_details"
            android:textColor="@color/font_hint"
            android:textSize="@dimen/font_small" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divider_dark" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/mta_calculate_event"
            android:textColor="@color/font_hint"
            android:textSize="@dimen/font_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:text="@string/mta_custom_event_details"
            android:textColor="@color/font_hint"
            android:textSize="@dimen/font_small" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_event_begin_cal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_button"
            android:padding="5dp"
            android:text="@string/mta_calculate_begin"
            android:textColor="@drawable/selector_text"
            android:textSize="@dimen/font_normal" />

        <TextView
            android:id="@+id/tv_event_end_cal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/selector_button"
            android:enabled="false"
            android:padding="5dp"
            android:text="@string/mta_calculate_end"
            android:textColor="@drawable/selector_text"
            android:textSize="@dimen/font_normal" />
    </LinearLayout>
    <View
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divider_dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_event_visual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button"
            android:padding="5dp"
            android:text="@string/mta_visual_event"
            android:textColor="@color/font_primary"
            android:textSize="@dimen/font_normal" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:lines="2"
            android:ellipsize="end"
            android:text="@string/mta_visual_event_details"
            android:textColor="@color/font_hint"
            android:textSize="@dimen/font_small" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>